# quickcheck-cpp

./: CMakeLists.txt  readme.md
doc/: concepts.md  tracker.md
include/: coverage_tracker.hpp  quickcheck.hpp  rand_generator.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_random_generator.cpp  test_shrink.cpp
